fixed navbar overlap when scrolling

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -8,10 +8,17 @@ body,
 html {
   width: 100%;
   height: 100%;
+  padding-top: 55px;
 }
 
 body {
   font-family: 'Source Sans Pro';
+}
+
+@media (max-width: 979px) {
+  body {
+    padding-top: 0px;
+  }
 }
 
 .btn-xl {
